--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "drag-drop": "^6.0.0",
     "laravel-mix": "^5.0.0",
     "vue": "^2.6.10"
