--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.19.0",
     "drag-drop": "^6.0.0",
     "laravel-mix": "^5.0.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "resolve-url-loader": "^3.1.0",
