--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "drag-drop": "^6.0.0",
     "laravel-mix": "^5.0.0",
+    "portal-vue": "^2.1.7",
     "vue": "^2.6.10",
     "vuex": "^3.1.2"
   },
