--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "laravel-mix": "^5.0.0",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.10",
+    "vuetify": "^2.2.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
