--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "deepmerge": "^4.2.2",
+    "fibers": "^4.0.2",
     "resolve-url-loader": "^3.1.0",
-    "sass": "^1.23.7",
+    "sass": "^1.24.2",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   }
