--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "portal-vue": "^2.1.7",
     "vue": "^2.6.10",
     "vuetify": "^2.2.1",
+    "vuetify-image-input": "^19.1.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
