--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "blueimp-canvas-to-blob": "^3.17.0",
+    "blueimp-load-image": "^2.26.0",
     "drag-drop": "^6.0.0",
     "laravel-mix": "^5.0.0",
     "portal-vue": "^2.1.7",
