--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
   },
   "devDependencies": {
     "deepmerge": "^4.2.2",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.1",
     "fibers": "^4.0.2",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.24.2",
